# Dockerizing-django

./: .env.dev  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
.semaphore/: semaphore.yml
compose/: Dockerfile  entrypoint  start  start-celery  start-celery-beat
core/: celery.py  settings.py  tasks.py  urls.py
nginx/: nginx.conf
poetry/: pyproject.toml
