[tool.poetry]
name = "doker-dj"
version = "0.1.0"
description = ""
authors = ["surajmt8848 <suraj8848mt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.13"
djangorestframework = "^3.12.4"
Pillow = "^8.2.0"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.1.0"
celery = "^5.1.2"
redis = "^3.5.3"
isort = "^5.8.0"
uvicorn = "^0.17.6"
django-environ = "^0.8.1"
django-redis = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
